--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="module" src="main.ts"></script>
-</head>
-<body>
-    <header>
+  </head>
+  <body>
+    <header id="header">
+      <div class="wrap">
+        <div>
+          <h1>ForumMister</h1>
+        </div>
+        <div class="ul-header">
+          <ul>
+            <li>Home</li>
+            <li>Användare</li>
+            <li>Profil</li>
+            <li>Logga ut</li>
+          </ul>
+        </div>
+      </div>
     </header>
-</body>
+  </body>
 </html>
