--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,17 @@
     <script type="module" src="main.ts"></script>
   </head>
   <body>
-    <header id="header">
+    <div class="inlogg">
+      <form>
+        <label for="user-name"><b>User name</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required>
+    
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+
+      </form>
+    </div>
+    <!--<header id="header">
       <div class="wrap">
         <div>
           <h1>ForumMister</h1>
@@ -56,6 +66,6 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section>-->
   </body>
 </html>
