html, javascript, css

--- a/src/index.html
+++ b/src/index.html
@@ -8,32 +8,29 @@
     <script type="module" src="main.ts"></script>
   </head>
   <body>
-    <div class="inlogg">
-      <form>
-        <label for="user-name"><b>User name</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
-    
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-
-      </form>
-    </div>
-    <!--<header id="header">
+    <header id="header">
       <div class="wrap">
-        <div>
+        <div class="head-div">
           <h1>ForumMister</h1>
         </div>
         <div class="ul-header">
-          <ul>
-            <li>Home</li>
-            <li>Användare</li>
-            <li>Profil</li>
-            <li>Logga ut</li>
-          </ul>
         </div>
       </div>
     </header>
-    <section>
+ <section>
+      <div class="inlogg">
+      <form>
+
+        <label for="user-name" class="textLab"><b>User name</b></label><br>
+        <input type="text" placeholder="Enter Email" name="email" required id="emailMar"><br>
+ 
+        <label for="psw" class="textLab"><b>Password</b></label><br>
+        <input type="password" placeholder="Enter Password" name="psw" required><br>
+        <button>Sign up</button>
+      </form>
+      </div>
+
+      <!--</
       <div class="sideNav">
         <div>
           <h2>Forum</h2>
@@ -65,7 +62,7 @@
             <li>Hej jag heter Peter jag gillar bilar wrooom</li>
           </ul>
         </div>
-      </div>
-    </section>-->
+      </div>-->
+    </section>
   </body>
 </html>
