--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="module" src="main.ts"></script>
+    <script type="module" src="./modules/frontend/generate.ts"></script>
   </head>
   <body>
     <header id="header">
