--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -25,21 +25,17 @@
             <label for="userName" class="textLab">User name</label>
             <!-- This ID makes no sense because we are using username @ -->
             <input type="text" placeholder="Enter User name" name="userName" required id="emailMar">
-            <!-- Temporary -->
-            <!-- Use ID errorMessage to update innerText -->
-            <p class="error" id="errorMesssage">Test</p>
           </div>
           <div class="formContainer">
             <label for="password" class="textLab">Password</label>
             <input type="password" placeholder="Enter Password" name="password" required>
             <!-- Temporary -->
-            <!-- Use ID errorMessage to update innerText -->
-            <p class="error" id="errorMesssage">Test</p>
+            <!-- Just generate this in TypeScript when needed-->
+            <p class="error" id="errorMesssage">username or password is invalid</p>
           </div>
           <div class="formContainer">
             <button>Sign up</button>
           </div>
-          
         </form>
       </div>
 
