--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="module" src="./modules/frontend/generate.ts"></script>
+    <script type="module" src="./main.ts"></script>
   </head>
   <body>
     <header id="header">
@@ -13,21 +13,32 @@
         <div class="head-div">
           <h1>ForumMister</h1>
         </div>
-        <div class="ul-header">
-        </div>
+        <div class="ul-header"></div>
       </div>
     </header>
- <section>
+    <section>
       <div class="inlogg">
-      <form>
+        <form>
+          <label for="user-name" class="textLab"><b>User name</b></label
+          ><br />
+          <input
+            type="text"
+            placeholder="Enter Email"
+            name="email"
+            required
+            id="emailMar"
+          /><br />
 
-        <label for="user-name" class="textLab"><b>User name</b></label><br>
-        <input type="text" placeholder="Enter Email" name="email" required id="emailMar"><br>
- 
-        <label for="psw" class="textLab"><b>Password</b></label><br>
-        <input type="password" placeholder="Enter Password" name="psw" required><br>
-        <button>Sign up</button>
-      </form>
+          <label for="psw" class="textLab"><b>Password</b></label
+          ><br />
+          <input
+            type="password"
+            placeholder="Enter Password"
+            name="psw"
+            required
+          /><br />
+          <button>Sign up</button>
+        </form>
       </div>
 
       <!--</
