--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -56,7 +56,7 @@
         <div>
             <h5>Profil: name</h5>
         </div>
-        <div>
+        <div class="img-box">
             <img>
         </div>
         <div>
