added javascript hidden

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
         <div>
           <h1>ForumMister</h1>
         </div>
-        <button>Log in</button>
+        <button id="idBu">Log in</button>
       </div>
     </header>
     <section>
@@ -53,6 +53,7 @@
         </div>
       </div>
       <div class="right-nav">
+        <div class="show-profile">
         <div>
             <h5>Profil: name</h5>
         </div>
@@ -65,10 +66,8 @@
             </ul>
         </div>
       </div>
-    </div>
-    </section>
-    
-        <!--<form>
+      <div id="show-logInn" class="show-logIn">
+        <form>
           <label for="user-name" class="textLab"><b>User name</b></label
           ><br />
           <input
@@ -78,7 +77,7 @@
             required
             id="emailMar"
           /><br />
-
+  
           <label for="psw" class="textLab"><b>Password</b></label
           ><br />
           <input
@@ -88,6 +87,10 @@
             required
           /><br />
           <button>Sign up</button>
-        </form>-->
+        </form>
+      </div>
+    </div>
+      </div>
+    </section>
   </body>
 </html>
