first part user function

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -31,7 +31,7 @@
           <h3>Members</h3>
         </div>
         <div>
-          <ul>
+          <ul id="member-ul">
             <li>heddddh</li>
           </ul>
         </div>
