--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,7 +19,7 @@
     </header>
     <section>
       <div class="sid-nav">
-      <div id="forum-container" class="content-box">
+        <div id="forum-container" class="content-box">
           <h2 id="forum-header">Forum</h2>
           <ul id="forum-ul">
             <li><button>Anime</button></li>
@@ -45,9 +45,9 @@
             <li>här är ett inlägg</li>
           </ul>
         </div>
-        <div class="input-field">
-          <label for="fname">First name:</label>
-          <input type="text" id="fname" name="fname" />
+        <div id="input-field" class="content-box">
+          <input type="text" id="message" name="message" />
+          <button id="post-button">send</button>
         </div>
       </div>
       <div class="right-nav">
