--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,7 +14,7 @@
         <div class="titleContainer">
           <h1>ForumMister</h1>
         </div>
-        <button id="idBu">Log in</button>
+        <button id="idBu"><a href="login.html">Log in</a></button>
       </div>
     </header>
     <section>
