Fixed css and moduls!

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,7 +33,7 @@
         </div>
         <div>
           <ul id="member-ul">
-            <li>heddddh</li>
+            <li>Peter</li>
           </ul>
         </div>
       </div>
