Small fix with text-area

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -44,8 +44,12 @@
           </ul>
         </div>
         <div id="input-field" class="content-box">
-          <input type="text" id="message" name="message" />
-          <button id="post-button">send</button>
+          <form>
+            <div class="message-wrapper">
+              <textarea type="text" id="message" name="message"></textarea>
+              <button id="post-button">send</button>
+            </div>
+          </form>
         </div>
       </div>
       <div class="right-nav">
