added img selector to profile

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -106,6 +106,17 @@
               name="pswSignup"
               required
             />
+            <ul class="img-ul">
+              <li><input type="radio" name="test" id="cb1" />
+                <label for="cb1"><img src="./img/bird.png" /></label>
+              </li>
+              <li><input type="radio" name="test" id="cb2" />
+                <label for="cb2"><img src="./img/cat.png" /></label>
+              </li>
+              <li><input type="radio" name="test" id="cb3" />
+                <label for="cb3"><img src="./img/dog.png" /></label>
+              </li>
+            </ul>
             <button id="signup-button">Sign up</button>
           </form>
         </div>
