Added text input "title"

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -45,6 +45,9 @@
         </div>
         <div id="input-field" class="content-box">
           <form>
+            <div>
+              <input type="text" id="title" name="title" placeholder="Write a title">
+            </div>
             <div class="message-wrapper">
               <textarea type="text" id="message" name="message"></textarea>
               <button id="post-button">send</button>
