--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,10 +12,12 @@
       <!-- Use descriptive classes pls @ -->
       <div class="wrap">
         <div class="titleContainer">
-          <h1>ForumMister</h1>
+        <img src="./img/icon.png" id = "iconHeader" alt="icon and the name">
         </div>
+        <div class="buttonHome">
         <button id="idBu">Log in</button>
         <button id="signupButton">Sign up</button>
+        </div>
       </div>
     </header>
     <section>
