added support for images
images path do not work because of parcel pathing.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -58,7 +58,7 @@
       <div class="right-nav">
         <div id="profile" class="content-box">
           <div>
-            <h5 id="profile-name">Profil: name</h5>
+            <h5 id="profile-name"></h5>
           </div>
           <div class="img-box">
             <img id="profile-image" />
