display some data

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,6 +16,7 @@
         </div>
         <button id="idBu">Log in</button>
         <button id="signupButton">Sign up</button>
+        <button id="logOutButton"> Log out</button>
       </div>
     </header>
     <section>
