--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -109,15 +109,15 @@
             <ul class="img-ul">
               <li>
                 <input type="radio" name="option" id="cb1" value="image1"/>
-                <label for="cb1"><img src="./img/bird.png" /></label>
+                <label for="cb1"><img src="./img/image1.png" /></label>
               </li>
               <li>
                 <input type="radio" name="option" id="cb2" value="image2"/>
-                <label for="cb2"><img src="./img/cat.png" /></label>
+                <label for="cb2"><img src="./img/image2.png" /></label>
               </li>
               <li>
                 <input type="radio" name="option" id="cb3" value="image3"/>
-                <label for="cb3"><img src="./img/dog.png" /></label>
+                <label for="cb3"><img src="./img/image3.png" /></label>
               </li>
             </ul>
             <button id="createAccountButton" type="submit">Sign up</button>
