--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -46,17 +46,18 @@
           <ul id="post-ul">
           </ul>
         </div>
-        <div id="input-field" class="content-box">
+
+<!--         
           <form>
             <div>
               <input type="text" id="title" name="title" placeholder="Write a title">
             </div>
             <div class="message-wrapper">
               <textarea type="text" id="message" name="message"></textarea>
-              <button id="post-button">send</button>
+              <button id="post-button" type="submit">send</button>
             </div>
-          </form>
-        </div>
+          </form> -->
+
       </div>
       <div class="right-nav">
         <div id="profile" class="content-box">
