Added userlist, userprofile minor fixes

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -29,11 +29,10 @@
           </ul>
         </div>
         <div>
-          <h3>Members</h3>
+          <h3>Users</h3>
         </div>
         <div>
-          <ul id="member-ul">
-            <li>Peter</li>
+          <ul id="users-ul">
           </ul>
         </div>
       </div>
