Added fix, varibale and some comments

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,10 +28,8 @@
           <ul id="forum-ul">
           </ul>
         </div>
-        <div>
+        <div id="userHeadingContainer" class="content-box">
           <h3>Users</h3>
-        </div>
-        <div>
           <ul id="users-ul">
           </ul>
         </div>
