showing recent posts on logged in profile

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -65,8 +65,8 @@
             <img id="profile-image" />
           </div>
           <div>
-            <ul id="profile-latest-posts">
-            </ul>
+            <div id="profile-latest-posts">
+            </div>
           </div>
           <div>
             <!-- This button shall be used for delete a users account -->
