--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="module" src="./main.ts"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Montserrat+Subrayada:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="header">
