--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -73,7 +73,7 @@
           </div>
           <div>
             <!-- This button shall be used for delete a users account -->
-            <button>Delete account</button>
+            <button id="deleteButton">Delete account</button>
           </div>
         </div>
         <div id="show-logInn" class="content-box">
