added delete account button

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -72,8 +72,7 @@
             </div>
           </div>
           <div>
-            <!-- This button shall be used for delete a users account -->
-            <button id="deleteButton">Delete account</button>
+            <button id="deleteAccountButtonContainer">Delete Account</button>
           </div>
         </div>
         <div id="show-logInn" class="content-box">
