--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,7 +18,7 @@
         <img src="./img/icon.png" id = "iconHeader" alt="icon and the name">
         </div>
         <div class="buttonHome">
-        <button id="logOutButton"> Log out</button>
+        <button id="logOutButton" class="logOutButton"> Log out</button>
         <button id="idBu">Log in</button>
         <button id="signupButton">Sign up</button>
         </div>
